# boat

./: .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CLAUDE.md  Caddyfile  README.md  docker-compose.dev.yml  docker-compose.yml
backend/: .env.example  Dockerfile  Dockerfile.dev  alembic.ini  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_validation_profile_misc_and_order.py  003_rename_sentence_comments_to_metadata.py  004_add_missing_indexes_on_foreign_keys.py  005_add_created_by_to_treebanks.py  006_add_is_admin_to_users.py
backend/app/: main.py
backend/app/core/: config.py  middleware.py  rate_limit.py  security.py
backend/app/models/: __init__.py  annotation.py  base.py  comment.py  guideline.py  sentence.py  treebank.py  user.py  validation_profile.py  wordline.py
backend/app/routers/: admin.py  annotations.py  auth.py  comments.py  guidelines.py  search.py  sentences.py  treebanks.py  validation.py  wordlines.py
backend/app/schemas/: annotation.py  auth.py  comment.py  guideline.py  search.py  sentence.py  treebank.py  validation_profile.py  wordline.py
backend/app/services/: agreement.py  conllu.py  structural_search.py  wordlines.py
backend/tests/: conftest.py  test_annotations.py  test_auth.py  test_authorization.py  test_conllu.py  test_roundtrip.py  test_search.py  test_sentences.py  test_treebanks.py  test_validation_edges.py  test_wordlines.py
backend/tests/fixtures/: amgic_sample.conllu
frontend/: Dockerfile  package-lock.json  package.json  playwright.config.ts  (+2 more)
(+78 files in other folders)
